[package]
name = "tower-sessions-surrealdb-store"
version = "0.7.0"
edition = "2021"
description = "SurrealDB session store. Not for direct use; see the `tower-sessions` crate for details."
authors = ["Calum Sieppert <sieppertcalum@gmail.com>"]
license = "MIT"
homepage = "https://github.com/rynoV/tower-sessions-surrealdb-store"
keywords = ["axum", "sessions", "cookie", "tower", "surrealdb"]
categories = ["asynchronous", "network-programming", "web-programming"]
repository = "https://github.com/rynoV/tower-sessions-surrealdb-store"
documentation = "https://docs.rs/tower-sessions-surrealdb-store"
readme = "README.md"
resolver = "2"
rust-version = "1.86.0"

[dependencies]
async-trait = "0.1.79"
rmp-serde = "1.0.0"
surrealdb = { version = "3.0.0-alpha", optional = true }
surrealdb-types = { version = "3.0.0-alpha", optional = true }
surrealdb-nightly = { version = ">=2, <4", optional = true }
tower-sessions-core = { version = "0.14.0", features = ["deletion-task"] }
tracing = "0.1.40"

[features]
default = ["surrealdb"]
surrealdb = ["dep:surrealdb", "dep:surrealdb-types"]
surrealdb-nightly = ["dep:surrealdb-nightly"]

[dev-dependencies]
axum = "0.8.4"
axum-core = "0.5.2"
serde = "1.0.209"
serde_json = "1.0.140"
tokio = "1.44.2"
tokio-test = "0.4.4"
tower = "0.5.2"
tower-sessions = "0.14.0"

[[example]]
name = "counter"
